<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
    android:paddingBottom="16dp"
android:paddingLeft="16dp"
android:paddingRight="16dp"
android:paddingTop="16dp"
android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titulo_establecimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/tv_titulo_establecimiento"
        android:textAlignment="center"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre_establecimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <EditText
            android:id="@+id/et_nombre_establecimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_nombre"
            android:inputType="textPersonName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nro_establecimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <EditText
            android:id="@+id/et_nro_establecimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_nro_establecimiento"
            android:inputType="number"
            android:maxLength="3" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_capturar_ubicacion"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_capturar_ubicacion" />

    <TextView
        android:id="@+id/tv_long"
        android:layout_width="55dp"
        android:layout_height="26dp"
        android:text="@string/tv_long"
        />

    <TextView
        android:id="@+id/tv_coord_long"
        android:layout_width="147dp"
        android:layout_height="29dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:text="@string/tv_coordenada_desconocida" />

    <TextView
        android:id="@+id/tv_lat"
        android:layout_width="55dp"
        android:layout_height="26dp"
        android:text="@string/tv_lat" />

    <TextView
        android:id="@+id/tv_coord_lat"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/tv_coordenada_desconocida" />

    <Button
        android:id="@+id/btn_foto"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="135dp"
        android:layout_height="59dp"
        android:text="@string/btn_tomar_foto" />

    <ImageView
        android:id="@+id/tv_establecimiento"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:contentDescription="Imagen del establecimiento"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_reg_tenencia"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:text="@string/tv_reg_tenencia"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/sp_reg_tenencia"
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_especificar"
        android:layout_width="351dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_especificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginEnd="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginRight="84dp"
            android:layout_marginStart="84dp"
            android:ems="10"
            android:hint="@string/et_especificar"
            android:inputType="textPersonName"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btn_siguiente"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn_siguiente"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_siguiente"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</LinearLayout>
