<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:weightSum="1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_titulo_encuestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_titulo_encuestado"
        android:textAlignment="center"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_apellido_encuestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/et_apellido_encuestado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_apellido"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/et_nombre_encuestado"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo_encuestado" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre_encuestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/et_nombre_encuestado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_nombre"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/et_edad_encuestado"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_apellido_encuestado" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_edad_encuestado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/et_edad_encuestado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_edad"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/tv_nivel_instruccion"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/sp_nacionalidad"
            app:layout_constraintTop_toBottomOf="@+id/et_nombre_encuestado" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/sp_nacionalidad"
        android:layout_width="157dp"
        android:layout_height="42dp"
        android:spinnerMode="dialog"
        tools:layout_editor_absoluteY="-41dp"
        tools:layout_editor_absoluteX="163dp" />

    <TextView
        android:id="@+id/tv_nivel_instruccion"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:text="@string/tv_instruccion"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="13dp" />

    <Spinner
        android:id="@+id/sp_niv_instruccion"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:spinnerMode="dialog"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="151dp" />

    <Button
        android:id="@+id/btn_encuestado_siguiente"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/btn_siguiente"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tv_situación_estudio"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:text="@string/tv_situación"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="46dp"
        tools:layout_editor_absoluteX="9dp" />

    <TextView
        android:id="@+id/tv_habita_establecimiento"
        android:layout_width="134dp"
        android:layout_height="42dp"
        android:text="@string/tv_habita_establecimiento"
        android:textSize="18sp"
        tools:layout_editor_absoluteY="307dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/rg_habita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="90dp"
        tools:layout_editor_absoluteX="171dp">

        <RadioButton
            android:id="@+id/rb_habita"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_si"
            tools:layout_editor_absoluteX="245dp"
            tools:layout_editor_absoluteY="398dp" />

        <RadioButton
            android:id="@+id/rb_no_habita"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_no"
            tools:layout_editor_absoluteX="245dp"
            tools:layout_editor_absoluteY="356dp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_situacion"
        android:layout_width="206dp"
        android:layout_height="37dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="48dp"
        tools:layout_editor_absoluteX="105dp">

        <RadioButton
            android:id="@+id/rb_completo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/rb_completo" />

        <RadioButton
            android:id="@+id/rb_incompleto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/rb_incompleto"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="304dp" />

    </RadioGroup>

</LinearLayout>
