<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_produccion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="mdatum.udc.com.m_datum.encuestaAgroquimicos.ProduccionFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/tv_titulo_produccion"
        android:layout_width="132dp"
        android:layout_height="0dp"
        android:text="@string/tv_titulo_produccion"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tv_produce_bajo_cubierta"
        android:layout_width="194dp"
        android:layout_height="21dp"
        android:layout_marginLeft="16dp"
        android:text="@string/tv_produce_invernadero"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="88dp"
        android:layout_marginStart="16dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rg_produce_bajo_cubierta"
        android:layout_width="230dp"
        android:layout_height="36dp"
        android:weightSum="1"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="80dp">

        <RadioButton
            android:id="@+id/rb_cubierto_si"
            android:layout_width="96dp"
            android:layout_height="36dp"
            android:layout_marginLeft="119dp"
            android:layout_marginTop="0dp"
            android:text="@string/tv_si"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="162dp"
            tools:layout_conversion_absoluteWidth="172dp"
            tools:layout_conversion_absoluteX="102dp"
            tools:layout_conversion_absoluteY="122dp" />

        <RadioButton
            android:id="@+id/rb_agroquimico_no"
            android:layout_width="81dp"
            android:layout_height="34dp"
            android:text="@string/tv_no"
            tools:layout_conversion_absoluteHeight="77dp"
            tools:layout_conversion_absoluteWidth="50dp"
            tools:layout_conversion_absoluteX="274dp"
            tools:layout_conversion_absoluteY="184dp"
            tools:layout_editor_absoluteX="14dp"
            tools:layout_editor_absoluteY="0dp" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_produccion_siguiente"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_siguiente"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>