<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:weightSum="1"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_m_datum"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.13"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_logo_agro"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/logo_agro" />

    <Button
        android:id="@+id/btn_encuesta"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:elevation="0dp"
        android:text="@string/btn_encuesta"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_sincro"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="0.10"
        android:text="@string/btn_sincro"
        android:textColor="@android:color/white" />


</LinearLayout>





















